# CorrelatedGaussianSVM

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
data/: Makefile  data  log  plot.gpi
include/: CMAES.h  CoulombPotential.h  DoubleTrapPotential.h  FigureOfMerits.hpp  MatrixElements.h  Multidim_min.h  PotentialList.h  PotentialStrategy.h  RealTrapPotential.h  SingleGaussPotential.h  System.h  TrapPotential.h  Utils.h  Variational.h  Wavefunction.hpp  fdcube.h
mainfiles/: CalculateResidualDatapoints.cpp  HeliumAtom.cpp  HydrogenAtom.cpp  PostAnalysis.cpp  TestGradient.cpp  TestGradientBasedOpt.cpp  TestRuntime.cpp  TestWavefuntion.cpp  ThreeParticleSqueeze.cpp  ThreePdoubleSqueeze.cpp  ThreePsimulSqueeze.cpp  ThreePtail.cpp  TwoParticleSqueeze.cpp  TwoPdoubleSqueeze.cpp  testNLOpt.cpp
old classes/: Evals.cpp  Evals.h  GaussianGenerator.cpp  GaussianGenerator.h  Hamilton.cpp  Hamilton.h  JacobiCoordinates.cpp  JacobiCoordinates.h  MultithreadDriver.cpp  MultithreadDriver.h  Presets.cpp  Presets.h  makefile
report/: Preamble.tex  main.tex  references.bib
report/tex/: matrixelements.tex  (+2 more)
src/: CMAES.cpp  CoulombPotential.cpp  DoubleTrapPotential.cpp  MatrixElements.cpp  Multidim_min.cpp  PotentialList.cpp  PotentialStrategy.cpp  RealTrapPotential.cpp  SingleGaussPotential.cpp  System.cpp  TrapPotential.cpp  Utils.cpp  Variational.cpp  Wavefunction.cpp  fdcube.cpp
test/: TestPot.cpp  TestPot.h  tests.cpp  tests.h
unfinished/: CMAESconstrained  Hamiltonian.cpp  Hamiltonian.h  simplex
unit-test/: test_utils.hpp  tests.cpp
